--- a/index.html
+++ b/index.html
@@ -17,4 +17,5 @@
   <script src="js/init.js"></script>
   <script src="js/webRTCHost.js"></script>
   <script src="js/webRTC.js"></script>
+  <script src="js/messageRouter.js"></script>
 </body>
