--- a/index.html
+++ b/index.html
@@ -18,4 +18,7 @@
   <script src="js/webRTCHost.js"></script>
   <script src="js/webRTC.js"></script>
   <script src="js/messageRouter.js"></script>
+  <script src="js/crypto/rollups/aes.js"></script>
+  <script src="js/crypto/rollups/sha3.js"></script>
+  <script src="js/createDeck.js"></script>
 </body>
