players down devid deck amonst themselves

--- a/index.html
+++ b/index.html
@@ -21,4 +21,5 @@
   <script src="js/crypto/rollups/aes.js"></script>
   <script src="js/crypto/rollups/sha3.js"></script>
   <script src="js/createDeck.js"></script>
+  <script src="js/players.js"></script>
 </body>
