they now agree on the first card on the play deck

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <script src="js/webRTCHost.js"></script>
   <script src="js/webRTC.js"></script>
   <script src="js/messageRouter.js"></script>
-  <script src="js/crypto/rollups/aes.js"></script>
   <script src="js/crypto/rollups/sha3.js"></script>
   <script src="js/createDeck.js"></script>
   <script src="js/players.js"></script>
+  <script src="js/playdeck.js"></script>
 </body>
